<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="Permissives_DB" Id="{c05a4b99-99cd-4605-96e2-a97127a00965}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	CageInterlockOK			: BOOL := 0;
	ShortingSystemEngaged	: BOOL := 0;
	AllChargerEOC			: BOOL := 0;
	AllChargeRelayClosed	: BOOL := 0;
	AllDumpRelayOpen		: BOOL := 0;
	ReadyToCharge			: BOOL := 0;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>