<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="Trips_DB" Id="{b9292f11-9c83-43f6-9b30-6c69cf4aaa02}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
		
	//AnyEstopPressed 			: BOOL;
	//AllDCpsuOK					: BOOL;
	//AnyChargerOverTemp			: BOOL;
	//AnyChargerLoadFault			: BOOL;
	//AnyChargerInterlockOpen		: BOOL;
	//AnyChargerFaulted			: BOOL; // same as summary fault
	
	//SystemTripped 				: BOOL;
	//InstrumentationFaulted		: BOOL;
	//AnyChargeRlyFail			: BOOL;
	//AnyDumpRlyFail				: BOOL;
	//AnyACInterlockFail			: BOOL;
	//AnyLossInhibitSignal		: BOOL;
	//AnyLossHVONsignal			: BOOL;
	
	ChargingTimerRunout         : BOOL;
	ChargedTimerRunout			: BOOL;
	DumpTimerRunout				: BOOL;
	//SystemTimeOut				: BOOL;
	NoFaultDetected				: BOOL;
	TimerRunOutON				: BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>